# zero_zero_template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: jolt.cmake  libraries.cmake  shaders.cmake
res/models/: cube.blend
src/: libraries.h  main.cpp  main.cppm  main.h
src/shaders/: example.frag  example.vert
